@@ -4,9 +4,9 @@ import static java.awt.SystemColor.info;
 
 import common.ICommon;
 import entities.Student;
-import java.sql.Date;
 import java.text.ParseException;
-import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.Arrays;
 import java.util.List;
 
@@ -22,28 +22,30 @@ public class StudentBo implements ICommon<Student> {
 
   @Override
   public List<Student> initiaPersonList() {
-    studentLists[0] = new Student("Bob Smith", new Date(1999, 11, 10),
-        "789 Oak St", 1.80, 75.0, "S34567",
-        "Stanford University",
-        2018, 7.8);
-    studentLists[1] = new Student("Alice Johnson", new Date(2001, 5, 20),
-        "456 Elm St", 1.68, 60.0, "S23456",
-        "Harvard University", 2019, 7.9);
-    studentLists[2] = new Student("Carol White", new Date(2002, 7, 30),
-        "101 Maple Ave", 1.65, 55.0, "S45678", "MIT",
-        2020, 4.3);
-    studentLists[3] = new Student("David Brown", new Date(2000, 3, 25),
-        "202 Pine St", 1.70, 68.0, "S56789",
-        "University of California, Berkeley", 2017, 8.5);
-    studentLists[4] = new Student("Eva Green", new Date(2003, 9, 15),
-        "303 Cedar Rd", 1.72, 62.5, "S67890",
-        "Princeton University", 2021, 9.5);
+//    studentLists[0] = new Student("Bob Smith", new Date(1999, 11, 10),
+//        "789 Oak St", 1.80, 75.0, "S34567",
+//        "Stanford University",
+//        2018, 7.8);
+//    studentLists[1] = new Student("Alice Johnson", new Date(2001, 5, 20),
+//        "456 Elm St", 1.68, 60.0, "S23456",
+//        "Harvard University", 2019, 7.9);
+//    studentLists[2] = new Student("Carol White", new Date(2002, 7, 30),
+//        "101 Maple Ave", 1.65, 55.0, "S45678", "MIT",
+//        2020, 4.3);
+//    studentLists[3] = new Student("David Brown", new Date(2000, 3, 25),
+//        "202 Pine St", 1.70, 68.0, "S56789",
+//        "University of California, Berkeley", 2017, 8.5);
+//    studentLists[4] = new Student("Eva Green", new Date(2003, 9, 15),
+//        "303 Cedar Rd", 1.72, 62.5, "S67890",
+//        "Princeton University", 2021, 9.5);
+//
+//    // Update count based on the number of students added
+//    count = 5;
+//
+//    // Convert the array to a List for returning
+//    return Arrays.asList(Arrays.copyOf(studentLists, count));
 
-    // Update count based on the number of students added
-    count = 5;
-
-    // Convert the array to a List for returning
-    return Arrays.asList(Arrays.copyOf(studentLists, count));
+    return List.of();
   }
 
   @Override
@@ -136,8 +138,8 @@ public class StudentBo implements ICommon<Student> {
             System.out.println("Student name updated successfully.");
             break;
           case 2:
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
-            studentLists[i].setDateOfBirth((Date) dateFormat.parse(String.valueOf(info)));
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+            studentLists[i].setDateOfBirth((LocalDate.parse(infor, formatter)));
             System.out.println("Student birth of date updated successfully.");
             break;
           case 3:
